[metadata]
name = cgPriceQuery
version = 0.0.0a7
author = gerrrg
author_email = gerrrrrrrg@gmail.com
description = Historical and current CoinGecko price queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerrrg/cgPriceQuery
project_urls =
    Bug Tracker = https://github.com/gerrrg/cgPriceQuery/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    alive-progress==2.1.0
    gql==2.0.0
    matplotlib==3.5.1
    numpy==1.22.0
    requests>=2.25.1
